@startuml

title __MEETINGBOOKING's Class Diagram__\n

  namespace Admin {
    class Admin.AccountData {
    }
  }
  

  namespace Admin {
    class Admin.AccountData {
    }
  }
  

  namespace Admin {
    class Admin.AdminController {
    }
  }
  

  namespace Admin {
    class Admin.AdminController {
    }
  }
  

  namespace Admin {
    class Admin.AdminController {
    }
  }
  

  namespace Admin {
    class Admin.AdminController {
    }
  }
  

  namespace Admin {
    class Admin.adminCreation {
    }
  }
  

  namespace Admin {
    class Admin.adminCreation {
    }
  }
  

  namespace Admin {
    class Admin.userBookings {
    }
  }
  

  namespace Admin {
    class Admin.userBookings {
    }
  }
  

  namespace Admin {
    class Admin.userBookings {
    }
  }
  

  namespace Caterers {
    class Caterers.CatererModel {
    }
  }
  

  namespace Caterers {
    class Caterers.CaterersController {
    }
  }
  

  namespace Cleaners {
    class Cleaners.CleanersController {
    }
  }
  

  namespace Cleaners {
    class Cleaners.CleaningModel {
    }
  }
  

  namespace Cleaners {
    class Cleaners.CleaningModel {
    }
  }
  

  namespace Cleaners {
    class Cleaners.CleaningSlot {
    }
  }
  

  namespace Customer {
    class Customer.CustomerBooking {
    }
  }
  

  namespace Customer {
    class Customer.CustomerBooking {
    }
  }
  

  namespace Customer {
    class Customer.CustomerBooking {
    }
  }
  

  namespace Customer {
    class Customer.CustomerBooking {
    }
  }
  

  namespace Customer {
    class Customer.CustomerBooking {
    }
  }
  

  namespace Customer {
    class Customer.CustomerBooking {
    }
  }
  

  namespace Customer {
    class Customer.CustomerBooking {
    }
  }
  

  namespace Customer {
    class Customer.CustomerController {
    }
  }
  

  namespace Customer {
    class Customer.CustomerController {
    }
  }
  

  namespace Customer {
    class Customer.CustomerController {
    }
  }
  

  namespace DBUtil {
    class DBUtil.DBConnection {
    }
  }
  

  namespace Login {
    class Login.Login {
    }
  }
  

  namespace Login {
    class Login.LoginController {
    }
  }
  

  namespace Login {
    class Login.LoginController {
    }
  }
  

  namespace Login {
    class Login.LoginController {
    }
  }
  

  namespace Login {
    class Login.LoginModel {
    }
  }
  

  namespace Login {
    class Login.LoginModel {
    }
  }
  

  namespace Login {
    class Login.LoginModel {
    }
  }
  

  namespace Login {
    class Login.LoginModel {
    }
  }
  

  namespace Login {
    class Login.User {
    }
  }
  

  namespace Login {
    class Login.User {
    }
  }
  

  namespace Login {
    class Login.User {
    }
  }
  

  namespace Register {
    class Register.RegisterController {
    }
  }
  

  namespace Register {
    class Register.RegisterController {
    }
  }
  

  namespace RoomBooker {
    class RoomBooker.Refreshment {
    }
  }
  

  namespace RoomBooker {
    class RoomBooker.RoomBooker {
    }
  }
  

  namespace RoomBooker {
    class RoomBooker.RoomBooker {
    }
  }
  

  namespace RoomBooker {
    class RoomBooker.RoomBooker {
    }
  }
  

  namespace RoomBooker {
    class RoomBooker.TimeSlot {
    }
  }
  

  Login.Login -up-|> javafx.application.Application
  Login.LoginController .up.|> javafx.fxml.Initializable
  Login.LoginController o-- Login.LoginModel : loginModel
  Login.LoginController .up.|> javafx.fxml.Initializable
  Login.LoginController o-- Login.LoginModel : loginModel
  Login.LoginController .up.|> javafx.fxml.Initializable
  Login.LoginController o-- Login.LoginModel : loginModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
